src/objects/HospitalLog__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HospitalId__c</fullName>
        <label>HospitalId</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>HospitalLogs</relationshipLabel>
        <relationshipName>HospitalLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsSuccess__c</fullName>
        <label>Is Success</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodType__c</fullName>
        <label>Method Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ResponseBody__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HospitalLog</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HospitalLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>